{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 157,
  "lineage": "44604885-0b7b-e7ae-547e-97577f64b178",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkInterfaces/network-nic",
            "internal_domain_name_suffix": "1imhe020wmmu3esm31k3l2emug.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/publicIPAddresses/public-ip",
                "subnet_id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/virtualNetworks/virtual-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "network-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "lindo-group"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.lindo",
            "azurerm_subnet.network",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "webserver_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkInterfaces/network-nic|/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg",
            "network_interface_id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkInterfaces/network-nic",
            "network_security_group_id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.network",
            "azurerm_network_security_group.webserver_nsg",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.lindo",
            "azurerm_subnet.network",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webserver_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg",
            "location": "eastus",
            "name": "webserver-nsg",
            "resource_group_name": "lindo-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.lindo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg/securityRules/http",
            "name": "http",
            "network_security_group_name": "webserver-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "lindo-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webserver_nsg",
            "azurerm_resource_group.lindo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg/securityRules/https",
            "name": "https",
            "network_security_group_name": "webserver-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "lindo-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webserver_nsg",
            "azurerm_resource_group.lindo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "webserver-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "lindo-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webserver_nsg",
            "azurerm_resource_group.lindo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "public-ip",
            "resource_group_name": "lindo-group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.lindo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/virtualNetworks/virtual-network/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lindo-group",
            "virtual_network_name": "virtual-network"
          },
          "dependencies": [
            "azurerm_resource_group.lindo",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6b7218da-b39a-4e19-924c-eed5d5f08ca6",
            "id": "/subscriptions/49cc1690-063d-4466-b8df-9464021b1605/resourceGroups/lindo-group/providers/Microsoft.Network/virtualNetworks/virtual-network",
            "location": "eastus",
            "name": "virtual-network",
            "resource_group_name": "lindo-group"
          },
          "dependencies": [
            "azurerm_resource_group.lindo"
          ]
        }
      ]
    }
  ]
}